crates/backyard-parser/tests/snapshots/types__break_on_var.snap
---
source: crates/backyard-parser/tests/types.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: class
    inheritance: ~
    name:
      node_type: identifier
      name:
        - 65
      loc:
        start:
          line: 1
          column: 6
          offset: 6
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    extends: ~
    implements: []
    body:
      node_type: block
      statements:
        - node_type: method
          visibility: ~
          inheritance: ~
          is_static: false
          function:
            node_type: function
            is_ref: false
            name:
              node_type: magic
              name:
                - 95
                - 95
                - 99
                - 111
                - 110
                - 115
                - 116
                - 114
                - 117
                - 99
                - 116
              loc:
                start:
                  line: 2
                  column: 11
                  offset: 21
                end:
                  line: 2
                  column: 22
                  offset: 32
              leadings: ~
              trailings: ~
            parameters:
              - node_type: constructor_parameter
                visibilities:
                  - Protected
                modifier: ~
                parameter:
                  node_type: parameter
                  variable_type:
                    node_type: intersection_type
                    types:
                      - node_type: type
                        is_nullable: false
                        name:
                          - 65
                        loc:
                          start:
                            line: 2
                            column: 33
                            offset: 43
                          end:
                            line: 2
                            column: 34
                            offset: 44
                        leadings: ~
                        trailings: ~
                      - node_type: type
                        is_nullable: false
                        name:
                          - 110
                          - 117
                          - 108
                          - 108
                        loc:
                          start:
                            line: 2
                            column: 35
                            offset: 45
                          end:
                            line: 2
                            column: 39
                            offset: 49
                        leadings: ~
                        trailings: ~
                    loc:
                      start:
                        line: 2
                        column: 33
                        offset: 43
                      end:
                        line: 2
                        column: 39
                        offset: 49
                    leadings: ~
                    trailings: ~
                  is_ref: true
                  is_ellipsis: false
                  name:
                    node_type: identifier
                    name:
                      - 97
                    loc:
                      start:
                        line: 2
                        column: 41
                        offset: 51
                      end:
                        line: 2
                        column: 42
                        offset: 52
                    leadings: ~
                    trailings: ~
                  value: ~
                  loc:
                    start:
                      line: 2
                      column: 23
                      offset: 33
                    end:
                      line: 2
                      column: 41
                      offset: 51
                  leadings: ~
                  trailings: ~
                loc:
                  start:
                    line: 2
                    column: 23
                    offset: 33
                  end:
                    line: 2
                    column: 41
                    offset: 51
                leadings: ~
                trailings: ~
            return_type: ~
            body:
              node_type: block
              statements: []
              loc:
                start:
                  line: 2
                  column: 44
                  offset: 54
                end:
                  line: 3
                  column: 2
                  offset: 58
              leadings: ~
              trailings: ~
            loc:
              start:
                line: 2
                column: 2
                offset: 12
              end:
                line: 3
                column: 2
                offset: 58
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 2
              column: 2
              offset: 12
            end:
              line: 3
              column: 2
              offset: 58
          leadings: ~
          trailings: ~
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 4
          column: 0
          offset: 60
      leadings: ~
      trailings: ~
    is_readonly: false
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 4
        column: 0
        offset: 60
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 4
    column: 0
    offset: 60
leadings: ~
trailings: ~
